--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="circle">
             <img
               class="star-icon"
-              src="/images/icon-star.svg"
+              src="./images/icon-star.svg"
               alt="Icon of a star"
             />
           </div>
